--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,16 +1,25 @@
 @import url('https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css');
 
+:root {
+  --container-margin-lg: 10vw;
+  --container-margin-sm: 7vw;
+}
+
 html,
 body {
   font-family: 'SUIT Variable', SUIT, -apple-system, BlinkMacSystemFont,
     system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo',
     'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji', 'Segoe UI Emoji',
     'Segoe UI Symbol', sans-serif;
+  color: #fff;
+  background-color: #000;
+  scroll-behavior: smooth;
 }
 
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 a {
@@ -20,4 +29,65 @@ a {
 
 li {
   list-style-type: none;
+}
+
+button {
+  border: none;
+  background-color: transparent;
+  font: inherit;
+}
+
+button:focus {
+  border: none;
+  outline: none;
+}
+
+button:focus {
+  outline: none;
+}
+
+h1 {
+  font-size: 10rem;
+  font-weight: 900;
+  letter-spacing: -0.625rem;
+  line-height: 0.875;
+}
+
+h5 {
+  font-size: 1.875rem;
+  letter-spacing: -0.05rem;
+}
+
+h6 {
+  font-size: 1.25rem;
+}
+
+#container {
+  position: relative;
+  margin: 0 auto;
+  width: calc(100vw - 2 * var(--container-margin-lg));
+  max-width: 1280px;
+}
+
+/* for mobile */
+@media screen and (max-width: 640px) {
+  html {
+    font-size: 12px;
+  }
+
+  #container {
+    width: calc(100vw - 2 * var(--container-margin-sm));
+  }
+
+  h1 {
+    font-size: 6rem;
+    letter-spacing: -0.4rem;
+  }
+}
+
+/* for tablet PC */
+@media screen and (max-width: 960px) and (min-width: 640px) {
+  html {
+    font-size: 14px;
+  }
 }
