Style About section

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -73,7 +73,8 @@ h3 {
 }
 
 h4 {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
+  letter-spacing: -0.04rem;
 }
 
 h6 {
@@ -95,14 +96,17 @@ h6 {
 
 .text-xl {
   font-size: 1rem;
+  letter-spacing: -0.05rem;
 }
 
 .text-lg {
   font-size: 0.875rem;
+  letter-spacing: -0.03rem;
 }
 
 .text-md {
   font-size: 0.75rem;
+  letter-spacing: -0.01rem;
 }
 
 .text-sm {
@@ -166,8 +170,8 @@ h4 {
 }
 
 .circle-md {
-  width: 10vw;
-  height: 10vw;
+  width: 8vw;
+  height: 8vw;
   border-radius: 50%;
 }
 
@@ -232,6 +236,14 @@ h4 {
   max-width: 1280px;
 }
 
+#about, #time-table, #tickets {
+  scroll-margin-top: 15vh;
+}
+
+main > section {
+  margin-top: 15vh;
+}
+
 /* for mobile */
 @media screen and (max-width: 640px) {
   html {
@@ -242,9 +254,18 @@ h4 {
     width: calc(100vw - 2 * var(--container-margin-sm));
   }
 
+  main > section {
+    margin-top: 10vh;
+  }
+
   h1 {
     font-size: 5rem;
     letter-spacing: -0.3rem;
+  }
+
+  .circle-md {
+    width: 12vw;
+    height: 12vw;
   }
 }
 
